--- a/i3status.conf
+++ b/i3status.conf
@@ -12,6 +12,7 @@ general {
 }
 
 order += "ipv6"
+order += "mpd"
 order += "disk /"
 order += "run_watch DHCP"
 order += "run_watch VPN"
@@ -54,4 +55,11 @@ load {
 
 disk "/" {
         format = "%avail"
+}
+
+mpd {
+        format_up = "%title - %album - %artist"
+        format_down = " - "
+        host = "127.0.0.1"
+        port = 6600
 }
